Independent Publisher 2: Fix My Account buttons spacing issue. See #28.

--- a/independent-publisher-2/woocommerce-rtl.css
+++ b/independent-publisher-2/woocommerce-rtl.css
@@ -740,6 +740,10 @@ ul#shipping_method {
   word-wrap: normal;
   word-break: normal; }
 
+.woocommerce-account .woocommerce-MyAccount-content table .button {
+  display: inline-block;
+  margin: 0.25em; }
+
 .woocommerce-account .woocommerce-MyAccount-content input[type="email"], .woocommerce-account .woocommerce-MyAccount-content input[type="tel"] {
   width: 100%; }
 
